Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,11 @@
 
 trigger:
 - master
+- task: Checkmarx AST@0
+  inputs:
+    CheckmarxService: 'ast demo'
+    projectName: 'Vulnerable App'
+    tenantName: 'jason_demo'
 
 pool:
   vmImage: ubuntu-latest
