--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,4 +1,9 @@
 # Starter pipeline
+- task: Checkmarx AST@0
+  inputs:
+    CheckmarxService: 'ast demo'
+    projectName: '$(Build.Repository.Name)'
+    tenantName: 'jason_demo'
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
